Добавляет страницу портфолио

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-01</title>
+    <title>goit-markup-hw-02</title>
   </head>
   <body>
     <header>
@@ -12,8 +12,8 @@
         <a href="./index.html"><span>Web</span>Studio</a>
 
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
+          <li><a href="./">Студия</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
@@ -123,7 +123,7 @@
     </main>
 
     <footer>
-      <a href="/"><span>Web</span>Studio</a>
+      <a href="./index.html"><span>Web</span>Studio</a>
 
       <address>г. Киев, пр-т Леси Украинки, 26</address>
 
