--- a/index.html
+++ b/index.html
@@ -5,20 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-markup-hw-02</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html"><span>Web</span>Studio</a>
+        <a href="./index.html" class="logo"
+          ><span class="accent-logo">Web</span>Studio</a
+        >
 
-        <ul>
-          <li><a href="./">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="site-nav list">
+          <li><a href="./ " class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
 
-      <ul>
+      <ul class="list">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
@@ -31,8 +34,8 @@
       </section>
 
       <!-- Особенности  -->
-      <section>
-        <h2>Наши особенности</h2>
+      <section class="section">
+        <h2 class="section-title">Наши особенности</h2>
 
         <ul>
           <li>
@@ -72,21 +75,21 @@
         <ul>
           <li>
             <img
-              src="/images/1.jpg"
+              src="./images/1.jpg"
               alt="разработака десктопных приложений"
               width="370"
             />
           </li>
           <li>
             <img
-              src="/images/2.jpg"
+              src="./images/2.jpg"
               alt="разработака мобильных приложений"
               width="370"
             />
           </li>
           <li>
             <img
-              src="/images/3.jpg"
+              src="./images/3.jpg"
               alt="разработака планшетных приложений"
               width="370"
             />
@@ -99,22 +102,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="/images/card-1.jpg" alt="Игорь Демьяненко" width="270" />
+            <img src="./images/card-1.jpg" alt="Игорь Демьяненко" width="270" />
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/images/card-2.jpg" alt="Ольга Репина" width="270" />
+            <img src="./images/card-2.jpg" alt="Ольга Репина" width="270" />
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="/images/card-3.jpg" alt="Николай Тарасов" width="270" />
+            <img src="./images/card-3.jpg" alt="Николай Тарасов" width="270" />
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="/images/card-4.jpg" alt="Михаил Ермаков" width="270" />
+            <img src="./images/card-4.jpg" alt="Михаил Ермаков" width="270" />
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
