--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-markup-hw-02</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -15,52 +20,58 @@
         >
 
         <ul class="site-nav list">
-          <li><a href="./ " class="link">Студия</a></li>
+          <li><a href="./" class="link current">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
 
       <ul class="list">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a href="mailto:info@devstudio.com" class="contact-link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
     <main>
       <!-- Герой -->
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <button type="button" class="button primery">Заказать услугу</button>
       </section>
 
       <!-- Особенности  -->
       <section class="section">
         <h2 class="section-title">Наши особенности</h2>
 
-        <ul>
+        <ul class="feature-lest">
           <li>
-            <h3>Внимание к деталям</h3>
+            <h3 class="title">Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="title">Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
+            <h3 class="title">Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
+            <h3 class="title">Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -70,8 +81,8 @@
       </section>
 
       <!-- Чем мы занимаемся -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
+      <section class="section">
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img
@@ -98,27 +109,27 @@
       </section>
 
       <!-- Наша команда -->
-      <section>
-        <h2>Наша команда</h2>
+      <section class="section">
+        <h2 class="section-title">Наша команда</h2>
         <ul>
           <li>
             <img src="./images/card-1.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3>Игорь Демьяненко</h3>
+            <h3 class="section-title">Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/card-2.jpg" alt="Ольга Репина" width="270" />
-            <h3>Ольга Репина</h3>
+            <h3 class="section-title">Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/card-3.jpg" alt="Николай Тарасов" width="270" />
-            <h3>Николай Тарасов</h3>
+            <h3 class="section-title">Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/card-4.jpg" alt="Михаил Ермаков" width="270" />
-            <h3>Михаил Ермаков</h3>
+            <h3 class="section-title">Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -126,13 +137,20 @@
     </main>
 
     <footer>
-      <a href="./index.html"><span>Web</span>Studio</a>
+      <a href="./index.html" class="logo"
+        ><span class="accent-logo">Web</span>Studio</a
+      >
 
       <address>г. Киев, пр-т Леси Украинки, 26</address>
 
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <a href="mailto:info@devstudio.com" class="footer-contact-link"
+          >info@devstudio.com</a
+        >
+        <br />
+        <a href="tel:+380961111111" class="footer-contact-link"
+          >+38 096 111 11 11</a
+        >
       </address>
     </footer>
   </body>
