--- a/portfolio.html
+++ b/portfolio.html
@@ -5,43 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html"><span>Web</span>Studio</a>
+        <a href="./index.html" class="logo"
+          ><span class="accent-logo">Web</span>Studio</a
+        >
 
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./" class="link current">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
 
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="contact-link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
 
     <main>
       <h1>Наши проекты</h1>
 
-      <ul>
-        <li><button type="button">Все</button></li>
-        <li><button type="button">Веб-сайты</button></li>
-        <li><button type="button">Приложения</button></li>
-        <li><button type="button">Дизайн</button></li>
-        <li><button type="button">Маркетинг</button></li>
+      <ul class="list">
+        <li><button type="button" class="button">Все</button></li>
+        <li><button type="button" class="button">Веб-сайты</button></li>
+        <li><button type="button" class="button">Приложения</button></li>
+        <li><button type="button" class="button">Дизайн</button></li>
+        <li><button type="button" class="button">Маркетинг</button></li>
       </ul>
 
-      <ul>
+      <ul class="list">
         <li>
           <a href=""
             ><img src="./images/portfolio-1.jpg" width="370" alt="Технокряк" />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p></a
+            <h2 class="section-title">Технокряк</h2>
+            <p class="paragraph">Веб-сайт</p></a
           >
         </li>
         <li>
@@ -51,8 +64,8 @@
               width="370"
               alt="Постер New Orlean vs Golden Star"
             />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p></a
+            <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
+            <p class="paragraph">Дизайн</p></a
           >
         </li>
         <li>
@@ -62,8 +75,8 @@
               width="370"
               alt="Ресторан Seafood"
             />
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p></a
+            <h2 class="section-title">Ресторан Seafood</h2>
+            <p class="paragraph">Приложение</p></a
           >
         </li>
         <li>
@@ -73,8 +86,8 @@
               width="370"
               alt="Проект Prime"
             />
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p></a
+            <h2 class="section-title">Проект Prime</h2>
+            <p class="paragraph">Маркетинг</p></a
           >
         </li>
         <li>
@@ -84,8 +97,8 @@
               width="370"
               alt="Проект Boxes"
             />
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p></a
+            <h2 class="section-title">Проект Boxes</h2>
+            <p class="paragraph">Приложение</p></a
           >
         </li>
         <li>
@@ -95,8 +108,8 @@
               width="370"
               alt="Inspiration has no Borders"
             />
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p></a
+            <h2 class="section-title">Inspiration has no Borders</h2>
+            <p class="paragraph">Веб-сайт</p></a
           >
         </li>
         <li>
@@ -106,15 +119,15 @@
               width="370"
               alt="Издание Limited Edition"
             />
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p></a
+            <h2 class="section-title">Издание Limited Edition</h2>
+            <p class="paragraph">Дизайн</p></a
           >
         </li>
         <li>
           <a href=""
             ><img src="./images/portfolio-8.jpg" width="370" alt="Проект LAB" />
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p></a
+            <h2 class="section-title">Проект LAB</h2>
+            <p class="paragraph">Маркетинг</p></a
           >
         </li>
         <li>
@@ -124,21 +137,28 @@
               width="370"
               alt="Growing Business"
             />
-            <h2>Growing Business</h2>
-            <p>Приложение</p></a
+            <h2 class="section-title">Growing Business</h2>
+            <p class="paragraph">Приложение</p></a
           >
         </li>
       </ul>
     </main>
 
     <footer>
-      <a href="./index.html"><span>Web</span>Studio</a>
+      <a href="./index.html" class="logo"
+        ><span class="accent-logo">Web</span>Studio</a
+      >
 
       <address>г. Киев, пр-т Леси Украинки, 26</address>
 
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <a href="mailto:info@devstudio.com" class="footer-contact-link"
+          >info@devstudio.com</a
+        >
+        <br />
+        <a href="tel:+380961111111" class="footer-contact-link"
+          >+38 096 111 11 11</a
+        >
       </address>
     </footer>
   </body>
