Добавляет оформление текста

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
           ><span class="accent-logo">Web</span>Studio</a
         >
 
-        <ul class="site-nav list">
+        <ul class="site-nav">
           <li><a href="./" class="link current">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
 
-      <ul class="list">
+      <ul>
         <li>
           <a href="mailto:info@devstudio.com" class="contact-link"
             >info@devstudio.com</a
@@ -40,39 +40,39 @@
     <main>
       <!-- Герой -->
       <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button type="button" class="button primery">Заказать услугу</button>
       </section>
 
       <!-- Особенности  -->
       <section class="section">
-        <h2 class="section-title">Наши особенности</h2>
+        <h2 class="">Наши особенности</h2>
 
-        <ul class="feature-lest">
+        <ul class="feature-list">
           <li>
             <h3 class="title">Внимание к деталям</h3>
-            <p>
+            <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
             <h3 class="title">Пунктуальность</h3>
-            <p>
+            <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
             <h3 class="title">Планирование</h3>
-            <p>
+            <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
             <h3 class="title">Современные технологии</h3>
-            <p>
+            <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -111,26 +111,26 @@
       <!-- Наша команда -->
       <section class="section">
         <h2 class="section-title">Наша команда</h2>
-        <ul>
+        <ul class="command-list">
           <li>
             <img src="./images/card-1.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3 class="section-title">Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="title">Игорь Демьяненко</h3>
+            <p class="text">Product Designer</p>
           </li>
           <li>
             <img src="./images/card-2.jpg" alt="Ольга Репина" width="270" />
-            <h3 class="section-title">Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title">Ольга Репина</h3>
+            <p class="text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/card-3.jpg" alt="Николай Тарасов" width="270" />
-            <h3 class="section-title">Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="title">Николай Тарасов</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img src="./images/card-4.jpg" alt="Михаил Ермаков" width="270" />
-            <h3 class="section-title">Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="title">Михаил Ермаков</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
