--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
     <main>
       <h1>Наши проекты</h1>
 
-      <ul class="list">
+      <ul>
         <li><button type="button" class="button">Все</button></li>
         <li><button type="button" class="button">Веб-сайты</button></li>
         <li><button type="button" class="button">Приложения</button></li>
@@ -49,12 +49,12 @@
         <li><button type="button" class="button">Маркетинг</button></li>
       </ul>
 
-      <ul class="list">
+      <ul class="projects-list">
         <li>
           <a href=""
             ><img src="./images/portfolio-1.jpg" width="370" alt="Технокряк" />
-            <h2 class="section-title">Технокряк</h2>
-            <p class="paragraph">Веб-сайт</p></a
+            <h2 class="title">Технокряк</h2>
+            <p class="text">Веб-сайт</p></a
           >
         </li>
         <li>
@@ -64,8 +64,8 @@
               width="370"
               alt="Постер New Orlean vs Golden Star"
             />
-            <h2 class="section-title">Постер New Orlean vs Golden Star</h2>
-            <p class="paragraph">Дизайн</p></a
+            <h2 class="title">Постер New Orlean vs Golden Star</h2>
+            <p class="text">Дизайн</p></a
           >
         </li>
         <li>
@@ -75,8 +75,8 @@
               width="370"
               alt="Ресторан Seafood"
             />
-            <h2 class="section-title">Ресторан Seafood</h2>
-            <p class="paragraph">Приложение</p></a
+            <h2 class="title">Ресторан Seafood</h2>
+            <p class="text">Приложение</p></a
           >
         </li>
         <li>
@@ -86,8 +86,8 @@
               width="370"
               alt="Проект Prime"
             />
-            <h2 class="section-title">Проект Prime</h2>
-            <p class="paragraph">Маркетинг</p></a
+            <h2 class="title">Проект Prime</h2>
+            <p class="text">Маркетинг</p></a
           >
         </li>
         <li>
@@ -97,8 +97,8 @@
               width="370"
               alt="Проект Boxes"
             />
-            <h2 class="section-title">Проект Boxes</h2>
-            <p class="paragraph">Приложение</p></a
+            <h2 class="title">Проект Boxes</h2>
+            <p class="text">Приложение</p></a
           >
         </li>
         <li>
@@ -108,8 +108,8 @@
               width="370"
               alt="Inspiration has no Borders"
             />
-            <h2 class="section-title">Inspiration has no Borders</h2>
-            <p class="paragraph">Веб-сайт</p></a
+            <h2 class="title">Inspiration has no Borders</h2>
+            <p class="text">Веб-сайт</p></a
           >
         </li>
         <li>
@@ -119,15 +119,15 @@
               width="370"
               alt="Издание Limited Edition"
             />
-            <h2 class="section-title">Издание Limited Edition</h2>
-            <p class="paragraph">Дизайн</p></a
+            <h2 class="title">Издание Limited Edition</h2>
+            <p class="text">Дизайн</p></a
           >
         </li>
         <li>
           <a href=""
             ><img src="./images/portfolio-8.jpg" width="370" alt="Проект LAB" />
-            <h2 class="section-title">Проект LAB</h2>
-            <p class="paragraph">Маркетинг</p></a
+            <h2 class="title">Проект LAB</h2>
+            <p class="text">Маркетинг</p></a
           >
         </li>
         <li>
@@ -137,8 +137,8 @@
               width="370"
               alt="Growing Business"
             />
-            <h2 class="section-title">Growing Business</h2>
-            <p class="paragraph">Приложение</p></a
+            <h2 class="title">Growing Business</h2>
+            <p class="text">Приложение</p></a
           >
         </li>
       </ul>
