--- a/portfolio.html
+++ b/portfolio.html
@@ -42,11 +42,17 @@
       <h1>Наши проекты</h1>
 
       <ul>
-        <li><button type="button" class="button">Все</button></li>
-        <li><button type="button" class="button">Веб-сайты</button></li>
-        <li><button type="button" class="button">Приложения</button></li>
-        <li><button type="button" class="button">Дизайн</button></li>
-        <li><button type="button" class="button">Маркетинг</button></li>
+        <li><button type="button" class="button secondary">Все</button></li>
+        <li>
+          <button type="button" class="button secondary">Веб-сайты</button>
+        </li>
+        <li>
+          <button type="button" class="button secondary">Приложения</button>
+        </li>
+        <li><button type="button" class="button secondary">Дизайн</button></li>
+        <li>
+          <button type="button" class="button secondary">Маркетинг</button>
+        </li>
       </ul>
 
       <ul class="projects-list">
