--- a/index.html
+++ b/index.html
@@ -9,149 +9,174 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="border">
+      <div class="container main-nav">
         <a href="./index.html" class="logo"
           ><span class="accent-logo">Web</span>Studio</a
         >
 
-        <ul class="site-nav">
-          <li><a href="./" class="link current">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
-        </ul>
-      </nav>
+        <nav>
+          <ul class="site-nav">
+            <li class="item"><a href="./" class="link current">Студия</a></li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
 
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com" class="contact-link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
-        </li>
-      </ul>
+        <ul class="contacts">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="contact-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="item">
+            <a href="tel:+380961111111" class="contact-link"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
     </header>
     <main>
       <!-- Герой -->
-      <section>
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения<br />для вашего бизнеса</h1>
         <button type="button" class="button primery">Заказать услугу</button>
       </section>
 
       <!-- Особенности  -->
       <section class="section">
-        <h2 class="">Наши особенности</h2>
+        <div class="container">
+          <h2 class="">Наши особенности</h2>
 
-        <ul class="feature-list">
-          <li>
-            <h3 class="title">Внимание к деталям</h3>
-            <p class="text">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Пунктуальность</h3>
-            <p class="text">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Планирование</h3>
-            <p class="text">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Современные технологии</h3>
-            <p class="text">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+          <ul class="feature-list">
+            <li class="item">
+              <h3 class="title">Внимание к деталям</h3>
+              <p class="text">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="title">Пунктуальность</h3>
+              <p class="text">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="title">Планирование</h3>
+              <p class="text">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="title">Современные технологии</h3>
+              <p class="text">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Чем мы занимаемся -->
       <section class="section">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/1.jpg"
-              alt="разработака десктопных приложений"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/2.jpg"
-              alt="разработака мобильных приложений"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/3.jpg"
-              alt="разработака планшетных приложений"
-              width="370"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title centered">Чем мы занимаемся</h2>
+          <ul class="doing-list">
+            <li>
+              <img
+                src="./images/1.jpg"
+                alt="разработака десктопных приложений"
+                width="370"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/2.jpg"
+                alt="разработака мобильных приложений"
+                width="370"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/3.jpg"
+                alt="разработака планшетных приложений"
+                width="370"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Наша команда -->
-      <section class="section">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="command-list">
-          <li>
-            <img src="./images/card-1.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3 class="title">Игорь Демьяненко</h3>
-            <p class="text">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/card-2.jpg" alt="Ольга Репина" width="270" />
-            <h3 class="title">Ольга Репина</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/card-3.jpg" alt="Николай Тарасов" width="270" />
-            <h3 class="title">Николай Тарасов</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/card-4.jpg" alt="Михаил Ермаков" width="270" />
-            <h3 class="title">Михаил Ермаков</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section secondary-bg-color">
+        <div class="container">
+          <h2 class="section-title centered">Наша команда</h2>
+          <ul class="command-list">
+            <li class="item">
+              <img
+                src="./images/card-1.jpg"
+                alt="Игорь Демьяненко"
+                width="270"
+              />
+              <h3 class="title">Игорь Демьяненко</h3>
+              <p class="text">Product Designer</p>
+            </li>
+            <li class="item">
+              <img src="./images/card-2.jpg" alt="Ольга Репина" width="270" />
+              <h3 class="title">Ольга Репина</h3>
+              <p class="text">Frontend Developer</p>
+            </li>
+            <li class="item">
+              <img
+                src="./images/card-3.jpg"
+                alt="Николай Тарасов"
+                width="270"
+              />
+              <h3 class="title">Николай Тарасов</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li class="item">
+              <img src="./images/card-4.jpg" alt="Михаил Ермаков" width="270" />
+              <h3 class="title">Михаил Ермаков</h3>
+              <p class="text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html" class="logo"
-        ><span class="accent-logo">Web</span>Studio</a
-      >
-
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
-
-      <address>
-        <a href="mailto:info@devstudio.com" class="footer-contact-link"
-          >info@devstudio.com</a
+    <footer class="footer-section">
+      <div class="container">
+        <a href="./index.html" class="logo footer-logo"
+          ><span class="accent-footer-logo">Web</span>Studio</a
         >
-        <br />
-        <a href="tel:+380961111111" class="footer-contact-link"
-          >+38 096 111 11 11</a
-        >
-      </address>
+
+        <address>г. Киев, пр-т Леси Украинки, 26</address>
+
+        <address>
+          <a href="mailto:info@devstudio.com" class="footer-contact-link"
+            >info@devstudio.com</a
+          >
+          <br />
+          <a href="tel:+380961111111" class="footer-contact-link"
+            >+38 096 111 11 11</a
+          >
+        </address>
+      </div>
     </footer>
   </body>
 </html>
