--- a/portfolio.html
+++ b/portfolio.html
@@ -9,163 +9,206 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="border">
+      <div class="container main-nav">
         <a href="./index.html" class="logo"
           ><span class="accent-logo">Web</span>Studio</a
         >
 
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./" class="link current">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
-        </ul>
-      </nav>
+        <nav>
+          <ul class="site-nav">
+            <li class="item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="item">
+              <a href="./portfolio.html" class="link current">Портфолио</a>
+            </li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
 
-      <ul class="list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="contact-link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
-        </li>
-      </ul>
+        <ul class="contacts">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="contact-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="item">
+            <a href="tel:+380961111111" class="contact-link"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
     </header>
 
-    <main>
-      <h1>Наши проекты</h1>
+    <main class="section">
+      <div class="container">
+        <h1>Наши проекты</h1>
 
-      <ul>
-        <li><button type="button" class="button secondary">Все</button></li>
-        <li>
-          <button type="button" class="button secondary">Веб-сайты</button>
-        </li>
-        <li>
-          <button type="button" class="button secondary">Приложения</button>
-        </li>
-        <li><button type="button" class="button secondary">Дизайн</button></li>
-        <li>
-          <button type="button" class="button secondary">Маркетинг</button>
-        </li>
-      </ul>
+        <ul class="btn-list">
+          <li class="item">
+            <button type="button" class="button secondary">Все</button>
+          </li>
+          <li class="item">
+            <button type="button" class="button secondary">Веб-сайты</button>
+          </li>
+          <li class="item">
+            <button type="button" class="button secondary">Приложения</button>
+          </li>
+          <li class="item">
+            <button type="button" class="button secondary">Дизайн</button>
+          </li>
+          <li class="item">
+            <button type="button" class="button secondary">Маркетинг</button>
+          </li>
+        </ul>
 
-      <ul class="projects-list">
-        <li>
-          <a href=""
-            ><img src="./images/portfolio-1.jpg" width="370" alt="Технокряк" />
-            <h2 class="title">Технокряк</h2>
-            <p class="text">Веб-сайт</p></a
-          >
-        </li>
-        <li>
-          <a href=""
-            ><img
-              src="./images/portfolio-2.jpg"
-              width="370"
-              alt="Постер New Orlean vs Golden Star"
-            />
-            <h2 class="title">Постер New Orlean vs Golden Star</h2>
-            <p class="text">Дизайн</p></a
-          >
-        </li>
-        <li>
-          <a href=""
-            ><img
-              src="./images/portfolio-3.jpg"
-              width="370"
-              alt="Ресторан Seafood"
-            />
-            <h2 class="title">Ресторан Seafood</h2>
-            <p class="text">Приложение</p></a
-          >
-        </li>
-        <li>
-          <a href=""
-            ><img
-              src="./images/portfolio-4.jpg"
-              width="370"
-              alt="Проект Prime"
-            />
-            <h2 class="title">Проект Prime</h2>
-            <p class="text">Маркетинг</p></a
-          >
-        </li>
-        <li>
-          <a href=""
-            ><img
-              src="./images/portfolio-5.jpg"
-              width="370"
-              alt="Проект Boxes"
-            />
-            <h2 class="title">Проект Boxes</h2>
-            <p class="text">Приложение</p></a
-          >
-        </li>
-        <li>
-          <a href=""
-            ><img
-              src="./images/portfolio-6.jpg"
-              width="370"
-              alt="Inspiration has no Borders"
-            />
-            <h2 class="title">Inspiration has no Borders</h2>
-            <p class="text">Веб-сайт</p></a
-          >
-        </li>
-        <li>
-          <a href=""
-            ><img
-              src="./images/portfolio-7.jpg"
-              width="370"
-              alt="Издание Limited Edition"
-            />
-            <h2 class="title">Издание Limited Edition</h2>
-            <p class="text">Дизайн</p></a
-          >
-        </li>
-        <li>
-          <a href=""
-            ><img src="./images/portfolio-8.jpg" width="370" alt="Проект LAB" />
-            <h2 class="title">Проект LAB</h2>
-            <p class="text">Маркетинг</p></a
-          >
-        </li>
-        <li>
-          <a href=""
-            ><img
-              src="./images/portfolio-9.jpg"
-              width="370"
-              alt="Growing Business"
-            />
-            <h2 class="title">Growing Business</h2>
-            <p class="text">Приложение</p></a
-          >
-        </li>
-      </ul>
+        <ul class="projects-list">
+          <li class="item">
+            <a href=""
+              ><img
+                src="./images/portfolio-1.jpg"
+                width="370"
+                alt="Технокряк"
+              />
+              <div class="content">
+                <h2 class="title">Технокряк</h2>
+                <p class="text">Веб-сайт</p>
+              </div>
+            </a>
+          </li>
+          <li class="item">
+            <a href=""
+              ><img
+                src="./images/portfolio-2.jpg"
+                width="370"
+                alt="Постер New Orlean vs Golden Star"
+              />
+              <div class="content">
+                <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                <p class="text">Дизайн</p>
+              </div>
+            </a>
+          </li>
+          <li class="item">
+            <a href=""
+              ><img
+                src="./images/portfolio-3.jpg"
+                width="370"
+                alt="Ресторан Seafood"
+              />
+              <div class="content">
+                <h2 class="title">Ресторан Seafood</h2>
+                <p class="text">Приложение</p>
+              </div>
+            </a>
+          </li>
+          <li class="item">
+            <a href=""
+              ><img
+                src="./images/portfolio-4.jpg"
+                width="370"
+                alt="Проект Prime"
+              />
+              <div class="content">
+                <h2 class="title">Проект Prime</h2>
+                <p class="text">Маркетинг</p>
+              </div>
+            </a>
+          </li>
+          <li class="item">
+            <a href=""
+              ><img
+                src="./images/portfolio-5.jpg"
+                width="370"
+                alt="Проект Boxes"
+              />
+              <div class="content">
+                <h2 class="title">Проект Boxes</h2>
+                <p class="text">Приложение</p>
+              </div>
+            </a>
+          </li>
+          <li class="item">
+            <a href=""
+              ><img
+                src="./images/portfolio-6.jpg"
+                width="370"
+                alt="Inspiration has no Borders"
+              />
+              <div class="content">
+                <h2 class="title">Inspiration has no Borders</h2>
+                <p class="text">Веб-сайт</p>
+              </div>
+            </a>
+          </li>
+          <li class="item">
+            <a href=""
+              ><img
+                src="./images/portfolio-7.jpg"
+                width="370"
+                alt="Издание Limited Edition"
+              />
+              <div class="content">
+                <h2 class="title">Издание Limited Edition</h2>
+                <p class="text">Дизайн</p>
+              </div>
+            </a>
+          </li>
+          <li class="item">
+            <a href=""
+              ><img
+                src="./images/portfolio-8.jpg"
+                width="370"
+                alt="Проект LAB"
+              />
+              <div class="content">
+                <h2 class="title">Проект LAB</h2>
+                <p class="text">Маркетинг</p>
+              </div>
+            </a>
+          </li>
+          <li class="item">
+            <a href=""
+              ><img
+                src="./images/portfolio-9.jpg"
+                width="370"
+                alt="Growing Business"
+              />
+              <div class="content">
+                <h2 class="title">Growing Business</h2>
+                <p class="text">Приложение</p>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
     </main>
 
-    <footer>
-      <a href="./index.html" class="logo"
-        ><span class="accent-logo">Web</span>Studio</a
-      >
-
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
-
-      <address>
-        <a href="mailto:info@devstudio.com" class="footer-contact-link"
-          >info@devstudio.com</a
+    <footer class="footer-section">
+      <div class="container">
+        <a href="./index.html" class="logo footer-logo"
+          ><span class="accent-footer-logo">Web</span>Studio</a
         >
-        <br />
-        <a href="tel:+380961111111" class="footer-contact-link"
-          >+38 096 111 11 11</a
-        >
-      </address>
+
+        <address>г. Киев, пр-т Леси Украинки, 26</address>
+
+        <address>
+          <a href="mailto:info@devstudio.com" class="footer-contact-link"
+            >info@devstudio.com</a
+          >
+          <br />
+          <a href="tel:+380961111111" class="footer-contact-link"
+            >+38 096 111 11 11</a
+          >
+        </address>
+      </div>
     </footer>
   </body>
 </html>
